My Full porfolio practice

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body{
     font-family: 'Roboto', sans-serif;
+    margin: 0px;
 }
 
 h1{
     font-size : 40px;
 }
-.name-highlight{
+.orange-highlight{
     color:orange;
 }
 .half-width{
@@ -17,4 +18,52 @@ h1{
 
 .half-width img{
     width:100%;
+}
+
+.top-banner{
+    background-image: url("image/top-banner.png");
+    background-repeat: no-repeat;
+}
+
+section {
+    height:700px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg,lightSalmon,tomato);
+    color:whitesmoke;
+    padding:10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+.top-banner2{
+    background-image: url("image/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.single-experience{
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 5px;
+    height:45%;
+    background-color: white;
+}
+.Experiance-area{
+   background-image: url("image/exp-bg.png");
+   background-repeat: no-repeat;
+   background-position: left;
+}
+#full-stack1{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,lightSalmon,tomato);
+    border-image-slice: 1;
+}
+#full-stack2{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,rgb(24, 20, 235),rgb(74, 255, 246));
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    font-size: 12px;
 }
